# dsplayground

./: .gitignore  Makefile  README.md  setup.cfg
dsplayground/: __init__.py  evaluation.py  geometry.py  models.py
examples/: factorization-rank.py  p2p-multipole-error-model-2d.py  p2p-multipole-error-model-3d.py  plot-p2p-multipole-error-model-2d.py  plot-p2p-multipole-error-model-3d.py  plot-p2p-multipole-error-model.py  plot-qbx-multipole-error-model-2d.py  proxy-radius.py  qbx-multipole-error-model-2d.py  qbx-skeletonization-3d.py
tests/: test_p2p_skeletonization.py
