[metadata]
name = dsplayground
version = 2021.9
author = Alexandru Fikl
author_email = alexfikl@gmail.com
url = https://github.com/alexfikl/dsplayground
description = Playground for direct solvers for BIEs
long_description = file: README.md
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    numerical-methods
    boundary-integral-equations

[options]
packages = find:
setup_requires =
    setuptools>=42
    wheel
install_requires =
    numpy>=1.15.0
    scipy>=1.4.0
    matplotlib>=3.0.0
    sympy>=1.1
    cython>=0.25
    mako>=1.0.5
    pyrsistent>=0.14.4
    pytools>=2020.2
    pyopencl>=2020.3.1
    islpy>=2020.2.2
python_requires = >=3.6

[options.extras_require]
dev =
    flake8
    flake8-quotes
    pep8-naming
    pylint
    mypy
    pytest
    types-dataclasses
fancy =
    scienceplots
git =
    cgen @ git+https://github.com/inducer/cgen.git#egg=cgen
    genpy @ git+https://github.com/inducer/genpy.git#egg=genpy
    pymbolic @ git+https://github.com/inducer/pymbolic.git#egg=pymbolic
    modepy @ git+https://github.com/inducer/modepy.git#egg=modepy
    pyfmmlib @ git+https://github.com/inducer/pyfmmlib.git#egg=pyfmmlib
    loopy @ git+https://github.com/inducer/loopy.git#egg=loopy
    arraycontext @ git+https://github.com/inducer/arraycontext.git#egg=arraycontext
    boxtree @ git+https://github.com/inducer/boxtree.git#egg=boxtree
    sumpy @ git+https://github.com/inducer/sumpy.git#egg=sumpy
    meshmode @ git+https://github.com/inducer/meshmode.git#egg=meshmode
    pytential @ git+https://github.com/alexfikl/pytential.git@direct-solver-skeletonization#egg=pytential

[flake8]
ignore =
    E123,
    E124,
    E126,
    E127,
    E128,
    E226,
    E402,
    W503,
    D102,
    D103
max-line-length = 88
inline-quotes = double
multiline-quotes = double

[tool:pytest]
testpaths = tests
cache_dir = .pytest-cache

[pylint.master]
jobs = 4
extension-pkg-whitelist=numpy
ignored-modules=matplotlib,arraycontext,meshmode,pyopencl,pytools

[pylint.messages_control]
enable=
    I0021                   # useless-suppression
disable =
    C0103,                  # invalid-name
    C0114,                  # missing-module-docstring
    C0115,                  # missing-class-docstring
    C0116,                  # missing-function-docstring
    C0209,                  # consider-using-f-string
    C0411,                  # wrong-import-order
    C0412,                  # ungrouped-imports
    C0413,                  # wrong-import-position
    C0415,                  # import-outside-toplevel
    E1136,                  # unsubscriptable-object
    R0801,                  # duplicate-code
    R0901,                  # too-many-ancestors
    R0903,                  # too-few-public-methods
    R0902,                  # too-many-instance-attributes
    R0912,                  # too-many-branches
    R0913,                  # too-many-arguments
    R0914,                  # too-many-locals
    R0915,                  # too-many-statements
    R1705,                  # no-else-return
    W0122,                  # exec-used
    W0511,                  # fixme
    W0603,                  # global-statement
    W0611,                  # unused-import
    W0612,                  # unused-variable
    W0613                   # unused-argument

[mypy]

[mypy-arraycontext.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-meshmode.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pyopencl.*]
ignore_missing_imports = True

[mypy-pytential.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sumpy.*]
ignore_missing_imports = True
